update
update multi query on user game, filter by username and email
